unpackaged/main/default/objects/User/fields/Cell_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Cell_Carrier__c</fullName>
    <label>Cell Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Boost Mobile</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>U.S. Cellular</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Virgin Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>