unpackaged/main/default/objects/User/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <description>User three alpha initials</description>
    <inlineHelpText>User three alpha initials</inlineHelpText>
    <label>Initials</label>
    <length>3</length>
    <type>Text</type>
</CustomField>