unpackaged/main/default/objects/User/fields/MMS_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>MMS_E_Mail__c</fullName>
    <label>MMS E-Mail</label>
    <type>Email</type>
</CustomField>