unpackaged/main/default/objects/User/fields/Moderator_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Consultant__c</fullName>
    <formula>IF(
OR(CONTAINS( Title , &quot;Moderator&quot;), CONTAINS( Title , &quot;Growth&quot;), CONTAINS( Title , &quot;Consultant&quot;)),
TRUE,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator/Consultant</label>
    <type>Checkbox</type>
</CustomField>