unpackaged/main/default/objects/User/fields/NCM_Associates_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>NCM_Associates_Contact_ID__c</fullName>
    <label>NCM Associates Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>