unpackaged/main/default/objects/User/fields/NCM_Internal_Department__c.field-meta.xml
<CustomField>
    <fullName>NCM_Internal_Department__c</fullName>
    <label>NCM Internal Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Internal_Department</valueSetName>
    </valueSet>
</CustomField>