unpackaged/main/default/objects/User/fields/NCM_Internal_Division__c.field-meta.xml
<CustomField>
    <fullName>NCM_Internal_Division__c</fullName>
    <label>NCM Internal Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Internal_Division</valueSetName>
    </valueSet>
</CustomField>