unpackaged/main/default/objects/User/fields/Product_Owner_Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner_Representative_Email__c</fullName>
    <label>Product Owner Representative Email</label>
    <type>Email</type>
</CustomField>