unpackaged/main/default/objects/User/fields/SMS_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>SMS_E_Mail__c</fullName>
    <label>SMS E-Mail</label>
    <type>Email</type>
</CustomField>