unpackaged/main/default/objects/User/listViews/Chatter_Users.listView-meta.xml
<ListView>
    <fullName>Chatter_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Chatter Free</value>
    </filters>
    <label>Chatter Users</label>
    <sharedTo>
        <group>Salesforce</group>
    </sharedTo>
</ListView>