unpackaged/main/default/objects/User/listViews/Deactivated_User.listView-meta.xml
<ListView>
    <fullName>Deactivated_User</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>License_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Deactivated User</label>
</ListView>