unpackaged/main/default/objects/User/listViews/Read_Only_Users.listView-meta.xml
<ListView>
    <fullName>Read_Only_Users</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NCM Read Only</value>
    </filters>
    <label>Read Only Users</label>
    <sharedTo>
        <group>Salesforce</group>
    </sharedTo>
</ListView>