unpackaged/main/default/objects/User/listViews/Sales_Users.listView-meta.xml
<ListView>
    <fullName>Sales_Users</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>NCM_Internal_Department__c</columns>
    <columns>NCM_Internal_Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NCM Sales</value>
    </filters>
    <label>Sales Users</label>
    <sharedTo>
        <group>Salesforce</group>
    </sharedTo>
</ListView>