unpackaged/main/default/objects/User/listViews/SF_Platform_Users.listView-meta.xml
<ListView>
    <fullName>SF_Platform_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>License_Type__c</field>
        <operation>contains</operation>
        <value>Platform</value>
    </filters>
    <label>SF Platform Users</label>
    <sharedTo>
        <group>Salesforce</group>
    </sharedTo>
</ListView>