unpackaged/main/default/objects/User/listViews/SF_Users.listView-meta.xml
<ListView>
    <fullName>SF_Users</fullName>
    <columns>License_Type__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>SFCONTENT_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>License_Type__c</field>
        <operation>equals</operation>
        <value>Salesforce</value>
    </filters>
    <label>SF Users</label>
</ListView>